# pyeve

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  package.json  pyproject.toml
.changeset/: fuzzy-tfl-approvals.md  lowercase-eve-name.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bundle-analysis.yml  ci.yml  container.yml  e2e-local.yml  e2e-vercel.yml
apps/docs/: geistdocs.tsx  package.json
apps/docs/app/[lang]/(home)/: page.tsx
apps/docs/app/[lang]/integrations/: page.tsx
apps/docs/components/geistdocs/: footer.tsx
apps/docs/lib/integrations/: data.ts
apps/fixtures/: README.md
apps/fixtures/weather-agent/: README.md
apps/frameworks/: README.md
apps/frameworks/next/: .gitignore  README.md  eslint.config.mjs
apps/frameworks/next/app/: layout.tsx
apps/frameworks/next/app/_chat/: App.tsx
apps/frameworks/nuxt/: .gitignore  README.md
apps/frameworks/nuxt/app/components/: EveAgentConsole.vue
apps/frameworks/nuxt/app/pages/: index.vue
apps/frameworks/sveltekit/: README.md
apps/frameworks/sveltekit/src/lib/: EveAgentConsole.svelte
apps/frameworks/sveltekit/src/routes/: +page.svelte
apps/templates/web-chat-next/: README.md
apps/templates/web-chat-next/agent/: instructions.md
apps/templates/web-chat-next/app/: layout.tsx
docs/: README.md  agent-config.md  connections.mdx  getting-started.mdx  introduction.mdx  sandbox.mdx  schedules.mdx  subagents.mdx
docs/channels/: custom.mdx  eve.mdx  linear.mdx  slack.mdx  telegram.mdx
docs/concepts/: default-harness.md  execution-model-and-durability.md  sessions-runs-and-streaming.md
docs/evals/: judge.mdx  overview.mdx  reporters.mdx
docs/guides/: auth-and-route-protection.md  deployment.md  dev-tui.md  instrumentation.md  remote-agents.md  session-context.md
docs/guides/client/: continuations.mdx  overview.mdx  streaming.mdx
docs/guides/frontend/: nextjs.mdx  nuxt.mdx  overview.mdx  sveltekit.mdx  use-eve-agent-svelte.mdx  use-eve-agent-vue.mdx
docs/reference/: cli.md
docs/superpowers/plans/: 2026-06-19-pyeve-implementation.md
docs/superpowers/specs/: 2026-06-19-pyeve-python-framework-design.md
docs/tools/: human-in-the-loop.md  overview.mdx
docs/tutorial/: connect-a-warehouse.mdx  first-agent.mdx  ship-it.mdx
e2e/: README.md
e2e/fixtures/agent-openapi-swagger/agent/connections/: tfl-approval.ts
e2e/fixtures/agent-openapi-swagger/evals/: tfl-swagger-approval.eval.ts
e2e/provision/: tools-sandbox.ts
python/: .gitignore  README.md  pyproject.toml
python/src/pyeve/: __init__.py  asgi.py  cli.py  session.py
python/src/pyeve/adapters/: sap.py
python/tests/fixtures/weather/agent/: agent.py
python/tests/integration/: test_loop.py
python/tests/unit/: test_types.py
scripts/: guard-invariants.mjs
src/pyeve/: __init__.py  asgi.py  cli.py  discover.py  loop.py  session.py  testing.py  types.py
src/pyeve/adapters/: anthropic.py  mistral.py  mock.py  openai.py  sap.py
tests/: conftest.py
tests/fixtures/weather/agent/: instructions.md
tests/fixtures/weather/agent/tools/: get_weather.py
tests/integration/: test_asgi.py  test_loop.py
tests/unit/: test_adapters.py  test_cli.py  test_discover.py  test_session.py
