[project]
name = "pyeve"
version = "0.0.1"
description = "Filesystem-first framework for durable backend AI agents in Python"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "llm", "framework", "durable"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
sap = ["generative-ai-hub-sdk>=4.0"]
litellm = ["litellm>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "watchfiles>=0.24",
    "uvicorn>=0.30",
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/vercel/eve"
Documentation = "https://beta.eve.dev/docs"
Repository = "https://github.com/vercel/eve"

[project.scripts]
pyeve = "pyeve.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyeve"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.envs.default]
features = ["dev"]
